8/9/25:

- add project information blurbs

8/8/25:

- populate project cards with gifs, names, and links
- adjust project card layout and spacing
- create basic project card template
- add icons and placeholder links
- add box shadow to images and about section
- add diagonal background to about section
- adjust container and image sizes

8/7/25:

- create basic html sections for layout
- add project stills
- add svgs, icons, and project gif files
- create basic plan

8/6/25:

- set up and link basic files