@@ -10,10 +10,13 @@
     <main>
         <section class="about">
             <div class="about-content">
-                <img src="./images/fisherman.jpg" alt="Majima from the Yakuza series" class="about-image">
+                <div class="image-container">
+                    <img src="./images/fisherman.jpg" alt="Majima from the Yakuza series" class="about-image">
+                    <div class="image-text"><h2>MK-DlR</h2></div>
+                </div>
                 <div class="about-text">
                     <h2>About</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis justo non tincidunt tincidunt. Duis in diam sem. Etiam quam tellus, vestibulum at lobortis et, faucibus vehicula nibh. Praesent iaculis enim velit, non interdum risus mollis vel. Mauris rutrum dapibus felis in luctus. Mauris ac tortor id ipsum viverra vulputate. Quisque non enim at ante porttitor aliquam vel varius ex. Sed ut justo vestibulum, aliquam dolor porttitor, aliquet tortor.</p>
+                    <p>When I first began learning coding, the make directory command sounded funny to me, so now I go by MK-DlR (lowercase l). I'm a student of The Odin Project with a focus on JavaScript. As is obvious from many of my projects, I particularly enjoy SEGA's Yakuza/Like A Dragon series and much of my work features gifs and images from it. The character typically seen in my codes and READMEs is Majima Gorō.</p>
                     <p class="about-icon-container">
                         <a href="https://ca.linkedin.com/"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" class="about-icons" /></a>
                         <a href="https://github.com/MK-DlR"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="about-icons" /></a>
@@ -187,12 +190,17 @@
         <div class="contact-section">
             <div class="contact-text">
                 <h2>Contact</h2>
-                <p>this is the footer section. text content will go here.</p>
+                <p>My contact information is not currently publically available, but thank you for the interest and for viewing my work!</p>
                 <address>
-                    fake address
+                    1234 Totally Real Address<br>
+                    Really Real Town, A Place 54321
                 </address>
-                <p>fake phone number</p>
-                <p>fake email</p>
+                <p class="contact-info"><img src="./icons/phone-outline.svg" class="sm-contact-icons"> 111-222-3333</p>
+                <p class="contact-info"><img src="./icons/email-outline.svg" class="sm-contact-icons"> mkdlr.at.gibhub.fake.email@gmail.com</p>
+                <p class="contact-icon-container">
+                    <a href="https://github.com/MK-DlR"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="contact-icons" /></a>
+                    <a href="https://ca.linkedin.com/"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" class="contact-icons" /></a>
+                </p>
             </div>
             <img src="./images/looking.jpg" alt="Majima from the Yakuza series" class="contact-image">
         </div>
